# dioxus-test-app

./: Cargo.toml  Dioxus.toml
assets/: tailwind.css
src/: main.rs
